# run.dev

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_PROCEDURE.md  SKILL.md  index.html  install.sh  llms.txt  robots.txt  sitemap.xml  vibe.yaml
rundev/: SKILL.md  SKLL.md
src/: app.rs  main.rs  tui.rs
src/ai/: diagnose.rs  mod.rs  mood.rs
src/core/: config.rs  hosts.rs  mod.rs  node_preload.js  preload.rs  process.rs  proxy.rs  resources.rs  scanner.rs  ssl.rs
src/docs/: ARCHITECTURE.md
src/ui/: command.rs  dashboard.rs  logs.rs  mod.rs  wizard.rs
